--- a/src/Game.css
+++ b/src/Game.css
@@ -12,7 +12,10 @@ h2 {
     font-weight: 100;
     font-size: 2em;
     border-bottom: 2px solid purple;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .Game-dice-section {
     width: 80%;
